@@ -99,8 +99,6 @@ namespace Qtilities {
 
                 ITask() {
                     qRegisterMetaType<ITask::TaskResult>("ITask::TaskResult");
-                    qRegisterMetaType<Logger::MessageType>("Logger::MessageType");
-                    qRegisterMetaType<Logger::MessageContextFlags>("Logger::MessageContextFlags");
                     d_elapsed_time_notifications_enabled = false;
                     d_widget_logger_engine_message_display_flags = 0;
                     d_task_id = -1;
